--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.26.0",
     "babel-runtime": "^6.22.0",
     "bemto.jade": "^1.0.0",
     "browser-sync": "^2.10.0",
